Improve all tests